Test/dafny4/Bug131.dfy.expect
Bug131.dfy(6,13): Error: member F does not exist in class Cell
1 resolution/type errors detected in Bug131.dfy
